# blnk

./: CHANGELOG.md  CONTRIBUTORS.md  README.md  STYLE.md  SYSTEM.md  install.sh  main.py  pyproject.toml  requirements.txt  update-blnk.sh
.github/workflows/: publish.yml
apis/: anthropic_api.py  base_api.py  echo_api.py  gemini_api.py  openai_api.py
config/: blnk_mcp_config.json  config.json
core/: chat_manager.py
scripts/: release.py
src/blnk/: main.py
src/blnk-chat/: __init__.py
src/blnk/apis/: anthropic_api.py
src/blnk/ui/: display.py
src/blnk/utils/: version.py
src/blnk_chat/: __init__.py  main.py
src/blnk_chat/apis/: anthropic_api.py  gemini_api.py  openai_api.py
src/blnk_chat/config/: config.yaml
src/blnk_chat/core/: chat_manager.py
src/blnk_chat/utils/: config_loader.py  mcp_client.py  setup_manager.py  token_tracker.py
ui/: display.py
utils/: mcp_client.py  mcp_formatter.py  setup_manager.py  version.py
