[project]
name = "blnk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "mcp-client>=0.1.0",
    "asyncio>=3.4.3"
]
