[project]
name = "blnk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "asyncio>=3.4.3",
    "mcp[cli]>=1.2.0",
    "rich>=13.0.0",
]
